<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo4">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.danielsalinasjaramillo.colombia_turistica.MainActivity"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle.tittle"
            android:text="@string/turismo"
            />

        <TextView
            style="@style/textViewStyle.content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/parque_prin"
            />

        <ImageView
            style="@style/imageViewStyle"
            android:src="@drawable/parque_principal"/>

        <TextView
            style="@style/textViewStyle.content"
            android:text="@string/parque_princi_descri"
            />

        <TextView
            style="@style/textViewStyle.content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/parque_ditaires"
            />

        <ImageView
            style="@style/imageViewStyle"
            android:src="@drawable/parque_ditaires"/>

        <TextView
            style="@style/textViewStyle.content"
            android:text="@string/parque_ditaires_descri"
            />

        <TextView
            style="@style/textViewStyle.content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/biblioteca"
            />

        <ImageView
            style="@style/imageViewStyle"
            android:src="@drawable/biblioteca"/>

        <TextView
            style="@style/textViewStyle.content"
            android:text="@string/bibliote_descri"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/regresar"
            android:textSize="20sp"
            android:text="@string/regresar"
            />

    </LinearLayout>

</ScrollView>
