<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo6">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.danielsalinasjaramillo.colombia_turistica.MainActivity"
        android:orientation="vertical">

        <TextView
        style="@style/textViewStyle.tittle"
            android:text="@string/daniel" />

        <ImageView
        style="@style/imageViewStyle"
            android:src="@drawable/daniel"
         />

        <TextView
            style="@style/textViewStyle.content"
            android:text="@string/perfil" />

        <TextView
            style="@style/textViewStyle.content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/contacto" />
        <TextView
            style="@style/textViewStyle.content"
            android:text="@string/celular" />
        <TextView
            style="@style/textViewStyle.content"
            android:text="@string/correo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/regresar"
            android:textSize="20sp"
            android:text="@string/regresar"
            />

    </LinearLayout>

</ScrollView>
